--- a/index.html
+++ b/index.html
@@ -5,133 +5,133 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Rotate Art</title>
+  <title>Dot Art</title>
 </head>
 <body>
   <header>
-    <h1>Painting Box</h1>
+    <h1>Dot Box</h1>
   </header>
 <div class="wrapper">
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
-  <div id="box" class="box"></div>
+  <div id="box" class="box1"></div>
+  <div id="box" class="box2"></div>
+  <div id="box" class="box3"></div>
+  <div id="box" class="box4"></div>
+  <div id="box" class="box5"></div>
+  <div id="box" class="box6"></div>
+  <div id="box" class="box7"></div>
+  <div id="box" class="box8"></div>
+  <div id="box" class="box9"></div>
+  <div id="box" class="box10"></div>
+  <div id="box" class="box11"></div>
+  <div id="box" class="box12"></div>
+  <div id="box" class="box13"></div>
+  <div id="box" class="box14"></div>
+  <div id="box" class="box15"></div>
+  <div id="box" class="box16"></div>
+  <div id="box" class="box17"></div>
+  <div id="box" class="box18"></div>
+  <div id="box" class="box19"></div>
+  <div id="box" class="box20"></div>
+  <div id="box" class="box21"></div>
+  <div id="box" class="box22"></div>
+  <div id="box" class="box23"></div>
+  <div id="box" class="box24"></div>
+  <div id="box" class="box25"></div>
+  <div id="box" class="box26"></div>
+  <div id="box" class="box27"></div>
+  <div id="box" class="box28"></div>
+  <div id="box" class="box29"></div>
+  <div id="box" class="box30"></div>
+  <div id="box" class="box31"></div>
+  <div id="box" class="box32"></div>
+  <div id="box" class="box33"></div>
+  <div id="box" class="box34"></div>
+  <div id="box" class="box35"></div>
+  <div id="box" class="box36"></div>
+  <div id="box" class="box37"></div>
+  <div id="box" class="box38"></div>
+  <div id="box" class="box39"></div>
+  <div id="box" class="box40"></div>
+  <div id="box" class="box41"></div>
+  <div id="box" class="box42"></div>
+  <div id="box" class="box43"></div>
+  <div id="box" class="box44"></div>
+  <div id="box" class="box45"></div>
+  <div id="box" class="box46"></div>
+  <div id="box" class="box47"></div>
+  <div id="box" class="box48"></div>
+  <div id="box" class="box49"></div>
+  <div id="box" class="box50"></div>
+  <div id="box" class="box51"></div>
+  <div id="box" class="box52"></div>
+  <div id="box" class="box53"></div>
+  <div id="box" class="box54"></div>
+  <div id="box" class="box55"></div>
+  <div id="box" class="box56"></div>
+  <div id="box" class="box57"></div>
+  <div id="box" class="box58"></div>
+  <div id="box" class="box59"></div>
+  <div id="box" class="box60"></div>
+  <div id="box" class="box61"></div>
+  <div id="box" class="box62"></div>
+  <div id="box" class="box63"></div>
+  <div id="box" class="box64"></div>
+  <div id="box" class="box65"></div>
+  <div id="box" class="box66"></div>
+  <div id="box" class="box67"></div>
+  <div id="box" class="box68"></div>
+  <div id="box" class="box69"></div>
+  <div id="box" class="box70"></div>
+  <div id="box" class="box71"></div>
+  <div id="box" class="box72"></div>
+  <div id="box" class="box73"></div>
+  <div id="box" class="box74"></div>
+  <div id="box" class="box75"></div>
+  <div id="box" class="box76"></div>
+  <div id="box" class="box77"></div>
+  <div id="box" class="box78"></div>
+  <div id="box" class="box79"></div>
+  <div id="box" class="box80"></div>
+  <div id="box" class="box81"></div>
+  <div id="box" class="box82"></div>
+  <div id="box" class="box83"></div>
+  <div id="box" class="box84"></div>
+  <div id="box" class="box85"></div>
+  <div id="box" class="box86"></div>
+  <div id="box" class="box87"></div>
+  <div id="box" class="box88"></div>
+  <div id="box" class="box89"></div>
+  <div id="box" class="box90"></div>
+  <div id="box" class="box91"></div>
+  <div id="box" class="box92"></div>
+  <div id="box" class="box93"></div>
+  <div id="box" class="box94"></div>
+  <div id="box" class="box95"></div>
+  <div id="box" class="box96"></div>
+  <div id="box" class="box97"></div>
+  <div id="box" class="box98"></div>
+  <div id="box" class="box99"></div>
+  <div id="box" class="box100"></div>
+  <div id="box" class="box101"></div>
+  <div id="box" class="box102"></div>
+  <div id="box" class="box103"></div>
+  <div id="box" class="box104"></div>
+  <div id="box" class="box105"></div>
+  <div id="box" class="box106"></div>
+  <div id="box" class="box107"></div>
+  <div id="box" class="box108"></div>
+  <div id="box" class="box109"></div>
+  <div id="box" class="box110"></div>
+  <div id="box" class="box111"></div>
+  <div id="box" class="box112"></div>
+  <div id="box" class="box113"></div>
+  <div id="box" class="box114"></div>
+  <div id="box" class="box115"></div>
+  <div id="box" class="box116"></div>
+  <div id="box" class="box117"></div>
+  <div id="box" class="box118"></div>
+  <div id="box" class="box119"></div>
+  <div id="box" class="box120"></div>
 </div>
 <script src="app.js"></script>
 </body>
