nav btn, title font, text-highlighting none

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <header>
     <h1>Dot Box</h1>
   </header>
+  <nav>
+    <div class="nav__bar">
+      <button class="nav__btn">Samples</button>
+      <div id="navList" class="nav__list hidden">
+        <a href="">Eye</a>
+        <a href="">1</a>
+        <a href="">2</a>
+      </div>
+    </div>
+  </nav>
 <div class="wrapper">
   <div id="box" class="box1"></div>
   <div id="box" class="box2"></div>
