--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <a href="">Eye</a>
         <a href="">1</a>
         <a href="">2</a>
+        <a href="">3</a>
+        <a href="">4</a>
       </div>
     </div>
   </nav>
