--- a/eye.html
+++ b/eye.html
@@ -13,9 +13,9 @@
   </header>
   <nav>
     <div class="nav__bar">
-      <button class="nav__btn">Samples</button>
+      <button class="nav__btn">Eye</button>
       <div id="navList" class="nav__list hidden">
-        <a href="">Eye</a>
+        <a href="index.html">Samples</a>
         <a href="">1</a>
         <a href="">2</a>
         <a href="">3</a>
